Revision history for Net-XMPP2

0.05
         - lots of documentation bugfixes and also added some
           more useful examples to the synopsises.
         - fixed a bug with enabling and disabling multiple features
           with enable_feature (as Ext::OOB does).

0.04 Thu Jul 26 20:41:57 CEST 2007
         - actually added event send_stanza_data after documenting it
         - added samples/simple_register_example
         - fixed some bugs in Net::XMPP2::Ext::Disco
         - now really added support for in band registration (XEP-0077)
         - added support for out of band transfers (XEP-0066)

0.03 Wed Jul 25 12:04:06 CEST 2007
         - fundamentally changed how events work, it's now less
           errorprone for the programmer (you don't have to return
           a true value now all the time and can call $self->unreg_me
           for unregistering a callback).
           Because of this change send_*_hook and contact_did_* events
           have changed their arguments.
         - implemented SAX event generator for easier integration
           with other XML libraries and generation of DOM.
         - added the possibility to completly restore the original
           XML data from a Net::XMPP2::Node.
         - implemented the component protocol to establish a component
           stream with a server.
         - reordered events a bit so that session_ready comes after
           roster retrieval (when it is retrieved)
         - added possibility to set the initial presence priority
           or prevent sending of initial presence
           (see Net::XMPP2::IM::Connection).
         - fixed some minor issue with handling invalid disco results
         - added send_*_hook event hooks for future extensions
           like the entity capabilities to be able to add payload
           to outgoing stanzas

0.02 Wed Jul 11 22:55:56 CEST 2007
         - added iq_xml event
         - added development client example in samples/devcl/